_generated-doc/3.34/config/quarkus-logging-json.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

h|[[quarkus-logging-json_section_quarkus-log-console-json]] [.section-name.section-level0]##link:#quarkus-logging-json_section_quarkus-log-console-json[Console logging]##
h|Type
h|Default

a| [[quarkus-logging-json_quarkus-log-console-json-enabled]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-enabled[`+++quarkus.log.console.json.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to enable the JSON console formatting extension, which disables "normal" console formatting.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-logging-json_quarkus-log-console-json-pretty-print]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-pretty-print[`+++quarkus.log.console.json.pretty-print+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.pretty-print+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable "pretty printing" of the JSON record. Note that some JSON parsers will fail to read the pretty printed output.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_PRETTY_PRINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_PRETTY_PRINT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-logging-json_quarkus-log-console-json-date-format]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-date-format[`+++quarkus.log.console.json.date-format+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.date-format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The date format to use. The special string "default" indicates that the default format should be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_DATE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_DATE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++default+++`

a| [[quarkus-logging-json_quarkus-log-console-json-record-delimiter]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-record-delimiter[`+++quarkus.log.console.json.record-delimiter+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.record-delimiter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The special end-of-record delimiter to be used. By default, newline is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_RECORD_DELIMITER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_RECORD_DELIMITER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-logging-json_quarkus-log-console-json-zone-id]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-zone-id[`+++quarkus.log.console.json.zone-id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.zone-id+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The zone ID to use. The special string "default" indicates that the default zone should be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_ZONE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_ZONE_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++default+++`

a| [[quarkus-logging-json_quarkus-log-console-json-exception-output-type]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-exception-output-type[`+++quarkus.log.console.json.exception-output-type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.exception-output-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The exception output type to specify.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_EXCEPTION_OUTPUT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_EXCEPTION_OUTPUT_TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`detailed`, `formatted`, `detailed-and-formatted`
|`+++detailed+++`

a| [[quarkus-logging-json_quarkus-log-console-json-print-details]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-print-details[`+++quarkus.log.console.json.print-details+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.print-details+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable printing of more details in the log.

Printing the details can be expensive as the values are retrieved from the caller. The details include the source class name, source file name, source method name, and source line number.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_PRINT_DETAILS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_PRINT_DETAILS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-logging-json_quarkus-log-console-json-key-overrides]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-key-overrides[`+++quarkus.log.console.json.key-overrides+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.key-overrides+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Override keys with custom values. Omitting this value indicates that no key overrides will be applied.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_KEY_OVERRIDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_KEY_OVERRIDES+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-logging-json_quarkus-log-console-json-excluded-keys]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-excluded-keys[`+++quarkus.log.console.json.excluded-keys+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.excluded-keys+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Keys to be excluded from the JSON output.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_EXCLUDED_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_EXCLUDED_KEYS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-logging-json_quarkus-log-console-json-additional-field-field-name-value]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-additional-field-field-name-value[`+++quarkus.log.console.json.additional-field."field-name".value+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.additional-field."field-name".value+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional field value.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-logging-json_quarkus-log-console-json-additional-field-field-name-type]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-additional-field-field-name-type[`+++quarkus.log.console.json.additional-field."field-name".type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.additional-field."field-name".type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional field type specification. Supported types: `string`, `int`, and `long`. String is the default if not specified.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`string`, `int`, `long`
|`+++string+++`

a| [[quarkus-logging-json_quarkus-log-console-json-log-format]] [.property-path]##link:#quarkus-logging-json_quarkus-log-console-json-log-format[`+++quarkus.log.console.json.log-format+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.console.json.log-format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specify the format of the produced JSON


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_CONSOLE_JSON_LOG_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_CONSOLE_JSON_LOG_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
a|`default`, `ecs`, `gcp`
|`+++default+++`


h|[[quarkus-logging-json_section_quarkus-log-file-json]] [.section-name.section-level0]##link:#quarkus-logging-json_section_quarkus-log-file-json[File logging]##
h|Type
h|Default

a| [[quarkus-logging-json_quarkus-log-file-json-enabled]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-enabled[`+++quarkus.log.file.json.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to enable the JSON console formatting extension, which disables "normal" console formatting.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-logging-json_quarkus-log-file-json-pretty-print]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-pretty-print[`+++quarkus.log.file.json.pretty-print+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.pretty-print+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable "pretty printing" of the JSON record. Note that some JSON parsers will fail to read the pretty printed output.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_PRETTY_PRINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_PRETTY_PRINT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-logging-json_quarkus-log-file-json-date-format]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-date-format[`+++quarkus.log.file.json.date-format+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.date-format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The date format to use. The special string "default" indicates that the default format should be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_DATE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_DATE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++default+++`

a| [[quarkus-logging-json_quarkus-log-file-json-record-delimiter]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-record-delimiter[`+++quarkus.log.file.json.record-delimiter+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.record-delimiter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The special end-of-record delimiter to be used. By default, newline is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_RECORD_DELIMITER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_RECORD_DELIMITER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-logging-json_quarkus-log-file-json-zone-id]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-zone-id[`+++quarkus.log.file.json.zone-id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.zone-id+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The zone ID to use. The special string "default" indicates that the default zone should be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_ZONE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_ZONE_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++default+++`

a| [[quarkus-logging-json_quarkus-log-file-json-exception-output-type]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-exception-output-type[`+++quarkus.log.file.json.exception-output-type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.exception-output-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The exception output type to specify.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_EXCEPTION_OUTPUT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_EXCEPTION_OUTPUT_TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`detailed`, `formatted`, `detailed-and-formatted`
|`+++detailed+++`

a| [[quarkus-logging-json_quarkus-log-file-json-print-details]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-print-details[`+++quarkus.log.file.json.print-details+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.print-details+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable printing of more details in the log.

Printing the details can be expensive as the values are retrieved from the caller. The details include the source class name, source file name, source method name, and source line number.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_PRINT_DETAILS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_PRINT_DETAILS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-logging-json_quarkus-log-file-json-key-overrides]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-key-overrides[`+++quarkus.log.file.json.key-overrides+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.key-overrides+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Override keys with custom values. Omitting this value indicates that no key overrides will be applied.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_KEY_OVERRIDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_KEY_OVERRIDES+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-logging-json_quarkus-log-file-json-excluded-keys]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-excluded-keys[`+++quarkus.log.file.json.excluded-keys+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.excluded-keys+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Keys to be excluded from the JSON output.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_EXCLUDED_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_EXCLUDED_KEYS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-logging-json_quarkus-log-file-json-additional-field-field-name-value]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-additional-field-field-name-value[`+++quarkus.log.file.json.additional-field."field-name".value+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.additional-field."field-name".value+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional field value.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-logging-json_quarkus-log-file-json-additional-field-field-name-type]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-additional-field-field-name-type[`+++quarkus.log.file.json.additional-field."field-name".type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.additional-field."field-name".type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional field type specification. Supported types: `string`, `int`, and `long`. String is the default if not specified.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`string`, `int`, `long`
|`+++string+++`

a| [[quarkus-logging-json_quarkus-log-file-json-log-format]] [.property-path]##link:#quarkus-logging-json_quarkus-log-file-json-log-format[`+++quarkus.log.file.json.log-format+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.file.json.log-format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specify the format of the produced JSON


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_FILE_JSON_LOG_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_FILE_JSON_LOG_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
a|`default`, `ecs`, `gcp`
|`+++default+++`


h|[[quarkus-logging-json_section_quarkus-log-syslog-json]] [.section-name.section-level0]##link:#quarkus-logging-json_section_quarkus-log-syslog-json[Syslog logging]##
h|Type
h|Default

a| [[quarkus-logging-json_quarkus-log-syslog-json-enabled]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-enabled[`+++quarkus.log.syslog.json.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to enable the JSON console formatting extension, which disables "normal" console formatting.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-logging-json_quarkus-log-syslog-json-pretty-print]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-pretty-print[`+++quarkus.log.syslog.json.pretty-print+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.pretty-print+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable "pretty printing" of the JSON record. Note that some JSON parsers will fail to read the pretty printed output.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_PRETTY_PRINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_PRETTY_PRINT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-logging-json_quarkus-log-syslog-json-date-format]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-date-format[`+++quarkus.log.syslog.json.date-format+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.date-format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The date format to use. The special string "default" indicates that the default format should be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_DATE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_DATE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++default+++`

a| [[quarkus-logging-json_quarkus-log-syslog-json-record-delimiter]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-record-delimiter[`+++quarkus.log.syslog.json.record-delimiter+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.record-delimiter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The special end-of-record delimiter to be used. By default, newline is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_RECORD_DELIMITER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_RECORD_DELIMITER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-logging-json_quarkus-log-syslog-json-zone-id]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-zone-id[`+++quarkus.log.syslog.json.zone-id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.zone-id+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The zone ID to use. The special string "default" indicates that the default zone should be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_ZONE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_ZONE_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++default+++`

a| [[quarkus-logging-json_quarkus-log-syslog-json-exception-output-type]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-exception-output-type[`+++quarkus.log.syslog.json.exception-output-type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.exception-output-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The exception output type to specify.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_EXCEPTION_OUTPUT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_EXCEPTION_OUTPUT_TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`detailed`, `formatted`, `detailed-and-formatted`
|`+++detailed+++`

a| [[quarkus-logging-json_quarkus-log-syslog-json-print-details]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-print-details[`+++quarkus.log.syslog.json.print-details+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.print-details+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable printing of more details in the log.

Printing the details can be expensive as the values are retrieved from the caller. The details include the source class name, source file name, source method name, and source line number.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_PRINT_DETAILS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_PRINT_DETAILS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-logging-json_quarkus-log-syslog-json-key-overrides]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-key-overrides[`+++quarkus.log.syslog.json.key-overrides+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.key-overrides+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Override keys with custom values. Omitting this value indicates that no key overrides will be applied.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_KEY_OVERRIDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_KEY_OVERRIDES+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-logging-json_quarkus-log-syslog-json-excluded-keys]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-excluded-keys[`+++quarkus.log.syslog.json.excluded-keys+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.excluded-keys+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Keys to be excluded from the JSON output.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_EXCLUDED_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_EXCLUDED_KEYS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-logging-json_quarkus-log-syslog-json-additional-field-field-name-value]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-additional-field-field-name-value[`+++quarkus.log.syslog.json.additional-field."field-name".value+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.additional-field."field-name".value+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional field value.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-logging-json_quarkus-log-syslog-json-additional-field-field-name-type]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-additional-field-field-name-type[`+++quarkus.log.syslog.json.additional-field."field-name".type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.additional-field."field-name".type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional field type specification. Supported types: `string`, `int`, and `long`. String is the default if not specified.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`string`, `int`, `long`
|`+++string+++`

a| [[quarkus-logging-json_quarkus-log-syslog-json-log-format]] [.property-path]##link:#quarkus-logging-json_quarkus-log-syslog-json-log-format[`+++quarkus.log.syslog.json.log-format+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.syslog.json.log-format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specify the format of the produced JSON


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SYSLOG_JSON_LOG_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SYSLOG_JSON_LOG_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
a|`default`, `ecs`, `gcp`
|`+++default+++`


h|[[quarkus-logging-json_section_quarkus-log-socket-json]] [.section-name.section-level0]##link:#quarkus-logging-json_section_quarkus-log-socket-json[Socket logging]##
h|Type
h|Default

a| [[quarkus-logging-json_quarkus-log-socket-json-enabled]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-enabled[`+++quarkus.log.socket.json.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determine whether to enable the JSON console formatting extension, which disables "normal" console formatting.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-logging-json_quarkus-log-socket-json-pretty-print]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-pretty-print[`+++quarkus.log.socket.json.pretty-print+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.pretty-print+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable "pretty printing" of the JSON record. Note that some JSON parsers will fail to read the pretty printed output.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_PRETTY_PRINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_PRETTY_PRINT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-logging-json_quarkus-log-socket-json-date-format]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-date-format[`+++quarkus.log.socket.json.date-format+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.date-format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The date format to use. The special string "default" indicates that the default format should be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_DATE_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_DATE_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++default+++`

a| [[quarkus-logging-json_quarkus-log-socket-json-record-delimiter]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-record-delimiter[`+++quarkus.log.socket.json.record-delimiter+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.record-delimiter+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The special end-of-record delimiter to be used. By default, newline is used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_RECORD_DELIMITER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_RECORD_DELIMITER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-logging-json_quarkus-log-socket-json-zone-id]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-zone-id[`+++quarkus.log.socket.json.zone-id+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.zone-id+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The zone ID to use. The special string "default" indicates that the default zone should be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_ZONE_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_ZONE_ID+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++default+++`

a| [[quarkus-logging-json_quarkus-log-socket-json-exception-output-type]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-exception-output-type[`+++quarkus.log.socket.json.exception-output-type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.exception-output-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The exception output type to specify.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_EXCEPTION_OUTPUT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_EXCEPTION_OUTPUT_TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`detailed`, `formatted`, `detailed-and-formatted`
|`+++detailed+++`

a| [[quarkus-logging-json_quarkus-log-socket-json-print-details]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-print-details[`+++quarkus.log.socket.json.print-details+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.print-details+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Enable printing of more details in the log.

Printing the details can be expensive as the values are retrieved from the caller. The details include the source class name, source file name, source method name, and source line number.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_PRINT_DETAILS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_PRINT_DETAILS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-logging-json_quarkus-log-socket-json-key-overrides]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-key-overrides[`+++quarkus.log.socket.json.key-overrides+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.key-overrides+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Override keys with custom values. Omitting this value indicates that no key overrides will be applied.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_KEY_OVERRIDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_KEY_OVERRIDES+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-logging-json_quarkus-log-socket-json-excluded-keys]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-excluded-keys[`+++quarkus.log.socket.json.excluded-keys+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.excluded-keys+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Keys to be excluded from the JSON output.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_EXCLUDED_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_EXCLUDED_KEYS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-logging-json_quarkus-log-socket-json-additional-field-field-name-value]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-additional-field-field-name-value[`+++quarkus.log.socket.json.additional-field."field-name".value+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.additional-field."field-name".value+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional field value.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_ADDITIONAL_FIELD__FIELD_NAME__VALUE+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-logging-json_quarkus-log-socket-json-additional-field-field-name-type]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-additional-field-field-name-type[`+++quarkus.log.socket.json.additional-field."field-name".type+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.additional-field."field-name".type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional field type specification. Supported types: `string`, `int`, and `long`. String is the default if not specified.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_ADDITIONAL_FIELD__FIELD_NAME__TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`string`, `int`, `long`
|`+++string+++`

a| [[quarkus-logging-json_quarkus-log-socket-json-log-format]] [.property-path]##link:#quarkus-logging-json_quarkus-log-socket-json-log-format[`+++quarkus.log.socket.json.log-format+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.log.socket.json.log-format+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specify the format of the produced JSON


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LOG_SOCKET_JSON_LOG_FORMAT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LOG_SOCKET_JSON_LOG_FORMAT+++`
endif::add-copy-button-to-env-var[]
--
a|`default`, `ecs`, `gcp`
|`+++default+++`


|===

